--- a/.github/workflows/test-fsharp.yml
+++ b/.github/workflows/test-fsharp.yml
@@ -13,10 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+
+      - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 5.0.201
+
       - name: Test
         run: dotnet test
         working-directory: fsharp
