--- a/dart/pubspec.yaml
+++ b/dart/pubspec.yaml
@@ -1,10 +1,9 @@
 name: simplify_dart
 description: The simplify algorithm in dart.
-version: 0.0.0-development
+version: 1.0.0
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-
 
 dev_dependencies:
   pedantic: ^1.10.0
