--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -3,10 +3,14 @@ name: Test Go Algorithm
 on:
   push:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'go/**'
   pull_request:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'go/**'
 
 jobs:
   test:
