--- a/.github/workflows/test-haskell.yml
+++ b/.github/workflows/test-haskell.yml
@@ -3,10 +3,14 @@ name: Test Haskell Algorithm
 on:
   push:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'haskell/**'
   pull_request:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'haskell/**'
 
 jobs:
   test:
