--- a/.github/workflows/test-rust.yml
+++ b/.github/workflows/test-rust.yml
@@ -3,10 +3,14 @@ name: Test Rust Algorithm
 on:
   push:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'rust/**'
   pull_request:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'rust/**'
 
 jobs:
   test:
