--- a/.github/workflows/test-scala.yml
+++ b/.github/workflows/test-scala.yml
@@ -3,10 +3,14 @@ name: Test Scala Algorithm
 on:
   push:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'scala/**'
   pull_request:
     branches:
-      - '**'
+      - master
+    paths:
+      - 'scala/**'
 
 jobs:
   test:
