--- a/.github/workflows/test-csharp.yml
+++ b/.github/workflows/test-csharp.yml
@@ -3,19 +3,20 @@ name: Test C# Algorithm
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'csharp/**'
+      - '.github/workflows/test-csharp.yml'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-dotnet@v1
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 5.0.201
+          dotnet-version: 9.x
 
       - name: Test
         run: dotnet test
