--- a/.github/workflows/test-fsharp.yml
+++ b/.github/workflows/test-fsharp.yml
@@ -3,24 +3,20 @@ name: Test F# Algorithm
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'fsharp/**'
-  pull_request:
-    branches:
-      - master
-    paths:
-      - 'fsharp/**'
+      - '.github/workflows/test-fsharp.yml'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-dotnet@v1
+      - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 5.0.201
+          dotnet-version: 9.x
 
       - name: Test
         run: dotnet test
