--- a/csharp/Simplify.CSharp.Test/Simplify.CSharp.Test.csproj
+++ b/csharp/Simplify.CSharp.Test/Simplify.CSharp.Test.csproj
@@ -1,33 +1,38 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>9</LangVersion>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
-        <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+        <PackageReference Include="Microsoft.NET.Test.Sdk"
+            Version="16.7.1" />
+        <PackageReference Include="xunit"
+            Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio"
+            Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="coverlet.collector" Version="1.3.0">
+        <PackageReference Include="coverlet.collector"
+            Version="1.3.0">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="..\..\test-data\*.json" LinkBase="Data">
+        <None Include="..\..\test-data\*.json"
+            LinkBase="Data">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Simplify.CSharp\Simplify.CSharp.csproj" />
+        <ProjectReference Include="..\Simplify.CSharp\Simplify.CSharp.csproj" />
     </ItemGroup>
 
 </Project>
